--- a/index.html
+++ b/index.html
@@ -266,8 +266,9 @@
 							</header>
 
 							<p>If you have read this far, please drop me a text! I would love to connect with you :) We can talk about anything - travelling, photography, volleyball, data analytics... </p>
+							<p>Feel free to contact me @jiayi_i on Telegram or email me  at llljiayi2000@gmail.com! </p>
 							<!-- I am currently a WORK IN PROGRESS, pursuing my bachelor's degree in Business Analytics with a specialisation in Financial Analytics and a second major in Economics.  -->
-							<form method="post" action="#">
+							<!-- <form method="post" action="#">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
@@ -278,7 +279,7 @@
 										<input type="submit" value="Send Message" />
 									</div>
 								</div>
-							</form>
+							</form> -->
 
 						</div>
 					</section>
