--- a/index.html
+++ b/index.html
@@ -266,7 +266,8 @@
 							</header>
 
 							<p>If you have read this far, please drop me a text! I would love to connect with you :) We can talk about anything - travelling, photography, volleyball, data analytics... </p>
-							<p>Feel free to contact me <b>@jiayi_i</b> on Telegram or email me  at <b>llljiayi2000@gmail.com</b>! </p>
+							<p>Feel free to contact me on <a href="https://telegram.me/jiayi_i">Telegram</a>  or email me  at <b>llljiayi2000@gmail.com</b>! </p>
+							
 							<!-- I am currently a WORK IN PROGRESS, pursuing my bachelor's degree in Business Analytics with a specialisation in Financial Analytics and a second major in Economics.  -->
 							<!-- <form method="post" action="#">
 								<div class="row">
