--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 										<header>
 											<h3>Orbital</h3>
 											<p>Developed a webpage that connects to a Telegram Bot via a common database to help improve efficiency of exam welfare pack in school through an online queuing system. </br></br>
-											Website: <a href="https://welfarebossweb.herokuapp.com/">https://welfarebossweb.herokuapp.com/</a>.</br>
+											Website: <a href="https://welfarebossweb.herokuapp.com/" target="_blank">https://welfarebossweb.herokuapp.com/</a>.</br>
 											Telegram Bot: @welfarequeue_bot. </br></br>
 											Tech Stack: HTML, CSS, Javascript, ReactJS, Firebase, ExpressJS, Mocha, Cypress, Bootstrap</p>
 										</header>
@@ -227,7 +227,7 @@
 										<header>
 											<h3>BT3103: Application Systems Development for Business Analytics</h3>
 											<p>Developed a webpage that provides a platform for users to connect and share their workouts. Provides a similar interface as other social media applications.</br>
-											Website: <a href="https://fitvt-b63fd.web.app/">https://fitvt-b63fd.web.app/</a>. </br>
+											Website: <a href="https://fitvt-b63fd.web.app/" target="_blank">https://fitvt-b63fd.web.app/</a>. </br>
 											Tech Stack: HTML, CSS, ReactJS, VueJS
 											</p>
 										</header>
