--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/myavatar.jpg" alt="" /></span>
 							<h1 id="title">Lim Jia Yi</h1>
-							<p>Financial Analyst</p>
+							<p>Data Analyst</p>
 						</div>
 
 					<!-- Nav -->
@@ -63,7 +63,7 @@
 							<header>
 								<h2 class="alt">Hi! I'm <strong>Jia Yi</strong>, a Business Analytics undergraduate from <a href="https://www.comp.nus.edu.sg/">National University of Singapore, School of Computing</a>.<br />
 								</h2>
-								<p>Passionate about Machine Learning, Deep Learning and Artificial Intelligence.<br />
+								<p>Passionate about data cleaning, data analysis and data visualization.<br />
 								</p>
 							</header>
 
@@ -182,7 +182,7 @@
 										<a href="#" class="image fit"><img src="images/sclprod1.jpg" alt="" /></a>
 										<header>
 											<h3>Shopee: Product Detection</h3>
-											<p>Used Sequential model to built an image classification model with over 100k images within 42 different categories to caterogize listings efficiently.</p>
+											<p>Used Sequential model to built an image classification model with over 100k images within 42 different categories to categorize listings efficiently.</p>
 										</header>
 									</article>
 									<article class="item">
@@ -248,10 +248,13 @@
 
 							<a href="#" class="image featured"><img src="images/aboutme4.jpg" alt="" /></a>
 
-							<p style='color:black'>My name is Jia Yi. I love to make sense of data.
-								Being a meticulous and opportunistic individual with an interest in finance,
+							<p style='color:black'>My name is Jia Yi. I love to make sense of data. I love data because there is just so much you can learn from it. 
+								Data analytics skills brings out the value in the huge amount of data generated everyday. 
+								Being a meticulous and opportunistic individual with my interest for data, I have participated in the Shopee Code League 2020 and 2021 events
+								to further hone my analytical skills. 
+								<!--Being a meticulous and opportunistic individual with an interest in finance,
 								I am actively gaining skills in financial analytics so that I can automate trading and analyse investments with risk-return trade-offs.
-								I am a huge fan of travelling but COVID-19 made that almost impossible which explains why I have been spending most of my time on FinTech.
+								I am a huge fan of travelling but COVID-19 made that almost impossible which explains why I have been spending most of my time on FinTech. -->
 							  </p>
 
 						</div>
