--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 							<a href="#" class="image featured"><img src="images/aboutme4.jpg" alt="" /></a>
 
 							<p style='color:black'>My name is Jia Yi. I love to make sense of data. I love data because there is just so much you can learn from it. 
-								Data analytics skills brings out the value in the huge amount of data generated everyday. 
+								Data analytics bring out the value in the huge amount of data generated everyday. 
 								Being a meticulous and opportunistic individual with my interest for data, I have participated in the Shopee Code League 2020 and 2021 events
 								to further hone my analytical skills. 
 								<!--Being a meticulous and opportunistic individual with an interest in finance,
