--- a/index.html
+++ b/index.html
@@ -217,8 +217,12 @@
 										<header>
 											<h3>Orbital</h3>
 											<p>Developed a webpage that connects to a Telegram Bot via a common database to help improve efficiency of exam welfare pack in school through an online queuing system. </br></br>
-											Website: <a href="https://welfarebossweb.herokuapp.com/" target="_blank">https://welfarebossweb.herokuapp.com/</a>.</br>
+											Website: <a href="https://welfarebossweb.herokuapp.com/">https://welfarebossweb.herokuapp.com/</a>.</br>
 											Telegram Bot: @welfarequeue_bot. </br></br>
+											GitHub repo: <a href="https://fitvt-b63fd.web.app/">https://github.com/wilinetan/welfarebot</a></br>
+											GitHub repo: <a href="https://fitvt-b63fd.web.app/">https://github.com/wilinetan/welfareboss</a></br>
+											
+											
 											Tech Stack: HTML, CSS, Javascript, ReactJS, Firebase, ExpressJS, Mocha, Cypress, Bootstrap</p>
 										</header>
 									</article>
@@ -227,8 +231,30 @@
 										<header>
 											<h3>BT3103: Application Systems Development for Business Analytics</h3>
 											<p>Developed a webpage that provides a platform for users to connect and share their workouts. Provides a similar interface as other social media applications.</br>
-											Website: <a href="https://fitvt-b63fd.web.app/" target="_blank">https://fitvt-b63fd.web.app/</a>. </br>
-											Tech Stack: HTML, CSS, ReactJS, VueJS
+											Website: <a href="https://fitvt-b63fd.web.app/">https://fitvt-b63fd.web.app/</a>. </br>
+											GitHub repo: <a href="https://fitvt-b63fd.web.app/">https://github.com/BT3103-FITvt/FITvt</a></br>
+											Tech Stack: VueJS, Firebase
+											</p>
+										</header>
+									</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/lifehack.jpg" alt="" /></a>
+										<header>
+											<h3>NUS LifeHack</h3>
+											<p>Developed a webpage that revolutionizes making new and/or maintaining relationships in a post COVID-19 world. Facilitates the interaction between students taking the same courses.</br>
+											Website: <a href="https://fitvt-b63fd.web.app/">http://lifehack2021-team-umzies.herokuapp.com</a>. </br>
+											GitHub repo: <a href="https://fitvt-b63fd.web.app/">https://github.com/sabyeo/lifehack</a></br>
+											Tech Stack: VueJS, Firebase
+											</p>
+										</header>
+									</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/lifehack.jpg" alt="" /></a>
+										<header>
+											<h3>Citi HackOverflow</h3>
+											<p>Developed a webpage that enables shoppers user to use e-vouchers in the form of QR codes when they shopped traditionally.</br>
+											GitHub repo: <a href="https://fitvt-b63fd.web.app/">https://github.com/jlxw48/citi-hackoverflow-team20</a></br>
+											Tech Stack: ReactJS, Firebase
 											</p>
 										</header>
 									</article>
