--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/lifehack.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/citihackoverflow.jpg" alt="" /></a>
 										<header>
 											<h3>Citi HackOverflow</h3>
 											<p>Developed a webpage that enables shoppers user to use e-vouchers in the form of QR codes when they shopped traditionally.</br>
