--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 										<a href="#" class="image fit"><img src="images/citihackoverflow.jpg" alt="" /></a>
 										<header>
 											<h3>Citi HackOverflow</h3>
-											<p>Developed a webpage that enables shoppers user to use e-vouchers in the form of QR codes when they shopped traditionally.</br>
+											<p>Developed a webpage that enables shoppers user to use e-vouchers in the form of QR codes when they shop traditionally.</br>
 											GitHub repo: <a href="https://fitvt-b63fd.web.app/">https://github.com/jlxw48/citi-hackoverflow-team20</a></br>
 											Tech Stack: ReactJS, Firebase
 											</p>
